# hippie

./: .bumpversion.cfg  .flake8  .travis.yml  README.md  README.rst  setup.cfg  tox.ini
docs/source/: conf.py  index.rst
src/bio2bel_hippie/: __init__.py  constants.py  manager.py  models.py  parser.py
tests/: cases.py
