##########################
# Setup.py Configuration #
##########################
# Configuring setup()
[metadata]
name = bio2bel_hippie
version = 0.0.1-dev
url = https://github.com/bio2bel/hippie
author = Charles Tapley Hoyt
author_email = charles.hoyt@scai.fraunhofer.de
maintainer = Charles Tapley Hoyt
maintainer_email = charles.hoyt@scai.fraunhofer.de
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3 :: Only
license = MIT
description = Bio2BEL HIPPIE.
long_description = file: README.rst
keywords =
    Biological Expression Language
    Protein Protein Interaction Networks

[options]
install_requires =
    bio2bel
    pybel
    sqlalchemy
python_requires = >=3.6
packages = find:
package_dir =
    = src

[options.entry_points]
console_scripts =
    bio2bel_hippie = bio2bel_hippie:main

[options.packages.find]
where = src

# configuring bdist_wheel
[bdist_wheel]
python-tag = py36
